src/css/structure/modules/infragistics.ui.scroll.css
/*//////////////////////////////////////////////// igScroll CSS ////////////////////////////////////////////////*/

.igscroll-scrollable {
	position: relative;
	overflow: hidden;
	outline:none;
}

.igscroll-touchscrollable {
	-ms-touch-action: none;
	-ms-content-zooming: none;
}

.igscroll-container {
	overflow: hidden;
	outline:none;
	position: absolute;
}

.igscroll-content {
	overflow: hidden;
	position: absolute;
	-webkit-transform: translatez(0);
	-moz-transform: translatez(0);
	-ms-transform: translatez(0);
	-o-transform: translatez(0);
	transform: translatez(0);
}

.igscroll-select-disabled {
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}
/***********************
*  Vertical Scrollbar  *
************************/
.igscroll-vcontainer {
	width: 15px;
	position: absolute;
	right: 0px;
	top: 0px;
}

.igscroll-vtrack {

}

/* Vertical arrow - general */
.igscroll-varrow {
	width: 15px;
	height: 15px;
}

.igscroll-varrow:hover {
	background: #999999;
}

.igscroll-varrow:active { 
	background: #757575;
}

.igscroll-varrow:before {
	width: 15px;
	height: 15px;		
	position: absolute;
	content: '';
	background-image: url('../images/igScroll/up.png');
	background-size: 9px 9px;
	background-repeat: no-repeat;
	background-position: center;
	pointer-events: none;
}		

/* Arrow Up */
.igscroll-uparrow:before {
	-webkit-transform: rotate(0);
	-moz-transform: rotate(0);
	-ms-transform: rotate(0);
	-o-transform: rotate(0);
	transform: rotate(0);
}		

.igscroll-uparrow-active:before {
	background-image: url('../images/igScroll/up_active.png');
	-webkit-transform: rotate(0);
	-moz-transform: rotate(0);
	-ms-transform: rotate(0);
	-o-transform: rotate(0);
	transform: rotate(0);
}

/* Arrow Down */
.igscroll-downarrow:before {
	-webkit-transform: rotate(-180deg);
	-moz-transform: rotate(-180deg);
	-ms-transform: rotate(-180deg);
	-o-transform: rotate(-180deg);
	transform: rotate(-180deg);
}		

.igscroll-downarrow-active:before {
	background-image: url('../images/igScroll/up_active.png');
	-webkit-transform: rotate(-180deg);
	-moz-transform: rotate(-180deg);
	-ms-transform: rotate(-180deg);
	-o-transform: rotate(-180deg);
	transform: rotate(-180deg);
}

/* Thumb Drag */
.igscroll-vdrag {
	display: block; 
	position: relative; 
	z-index: 1;
	overflow: hidden;
	background: #999999;
	border-radius: 3px;
}

.igscroll-vdrag-thin {
	left: 5px;
	width: 5px;
}

.igscroll-vdrag-big {
	left: 3px;
	width: 9px;
}

.igscroll-vdrag:hover { 
	background: #737373;
}

.igscroll-vdrag:active { 
	background: #575757;
	cursor: default;
}

/***********************
* Horizontal Scrollbar *
************************/
.igscroll-hcontainer {
	height: 15px;
	position: absolute;
	bottom: 0px;
}

.igscroll-htrack {
	height: 15px;
	float: left;
}

/* Horizontal arrow - general */
.igscroll-harrow {
	width: 15px;
	height: 15px;
	float: left;
}

.igscroll-harrow:hover {
	background: #999999;
}

.igscroll-harrow:active { 
	background: #757575;
}

.igscroll-harrow:before {
	width: 15px;
	height: 15px;		
	position: absolute;
	content: '';
	background-image: url('../images/igScroll/up.png');
	background-size: 9px 9px;
	background-repeat: no-repeat;
	background-position: center;
	pointer-events: none;
}		

/* Arrow Left */
.igscroll-leftarrow:before {
	-webkit-transform: rotate(-90deg);
	-moz-transform: rotate(-90deg);
	-ms-transform: rotate(-90deg);
	-o-transform: rotate(-90deg);
	transform: rotate(-90deg);
}	

.igscroll-leftarrow-active:before {
	background-image: url('../images/igScroll/up_active.png');
	-webkit-transform: rotate(-90deg);
	-moz-transform: rotate(-90deg);
	-ms-transform: rotate(-90deg);
	-o-transform: rotate(-90deg);
	transform: rotate(-90deg);
}

/* Arrow Right */
.igscroll-rightarrow:before {
	-webkit-transform: rotate(90deg);
	-moz-transform: rotate(90deg);
	-ms-transform: rotate(90deg);
	-o-transform: rotate(90deg);
	transform: rotate(90deg);
}		

.igscroll-rightarrow-active:before {
	background-image: url('../images/igScroll/up_active.png');
	-webkit-transform: rotate(90deg);
	-moz-transform: rotate(90deg);
	-ms-transform: rotate(90deg);
	-o-transform: rotate(90deg);
	transform: rotate(90deg);
}

/* Thumb Drag */
.igscroll-hdrag {
	position: relative;
	display: block;
	background: #999999;
	border-radius: 3px;
	z-index: 1;
	overflow: hidden;
}

.igscroll-hdrag-thin {
	top: 5px;
	height: 5px;
}

.igscroll-hdrag-big {
	top: 3px;
	height: 9px;
}

.igscroll-hdrag:hover { 
	background: #737373;
}

.igscroll-hdrag:active { 
	background: #575757;
	cursor: default;
}

/**********************
*  Native Scrollbars  *
***********************/
.igscroll-vnative-outer {
	position: relative;
	float: right;
	width: 18px;
	overflow-x: hidden;
	overflow-y: auto;
	right: 0px;
}

.igscroll-vnative-inner {
	width: 17px;
}

.igscroll-hnative-outer {
	position: relative;
	height: 18px;
	bottom: 2px;
	overflow-x: auto;
	overflow-y: hidden;
}

.igscroll-hnative-inner {
	height: 17px;
}

.igscroll-filler {
	position: absolute;
	width: 17px;
	height: 17px;
	right: 0px;
	bottom: 0px;
	background-color: white;
}

